<resources>
    <string name="app_name">NYTimesApp</string>
    <string name="title_home">Home</string>
    <string name="title_books">Books</string>

    <string name="loading">Loading…</string>
    <string name="last_updated">Last Updated:</string>
    <string name="standard_thumbnail">Standard Thumbnail</string>
    <string name="tag_best_seller_type">Best Seller Name</string>
    <string name="tag_overview_type">Book ISBN</string>
    <string name="display_name_not_found">Display name not found</string>
    <string name="title_not_found">Title not found</string>
    <string name="author_not_found">Author not found</string>
    <string name="desc_not_found">Description not found</string>
    <string name="list_name_not_found">List name not found</string>
    <string name="book_review_link_not_found">Book review link not found</string>
    <string name="first_chapter_link_not_found">First chapter link not found</string>
    <string name="sunday_review_link_not_found">Sunday review link not found</string>
    <string name="article_chapter_link_not_found">Article chapter link not found</string>
    <string name="amazon">Amazon</string>
    <string name="local_bookseller">Local Booksellers</string>
    <string name="barnes_noble">Barnes and Noble</string>
    <string name="source_not_found">Source not found</string>
    <string name="snippet_not_found">Snippet not found</string>
    <string name="headlines_not_found">Headlines not found</string>
    <string name="top_stories">TopStories</string>
    <string name="search_results">SearchResults</string>
    <string name="filter">Filter</string>
    <string name="best_seller">Best Seller</string>
    <string name="overview">Overview</string>
    <string name="top_story">Top Story</string>
    <string name="book_title">Book Title:</string>
    <string name="author">Author:</string>
    <string name="description">Description:</string>
    <string name="current_rank">Current Rank</string>
    <string name="last_week_rank">Last Week Rank</string>
    <string name="list_name">List Name</string>
    <string name="weeks_on_list">Weeks on List</string>
    <string name="primary_isbn_10">Primary ISBN 10:</string>
    <string name="primary_isbn_13">Primary ISBN 13:</string>
    <string name="book_review_link">Book Review</string>
    <string name="first_chapter_link">First Chapter</string>
    <string name="sunday_review_link">Sunday Review</string>
    <string name="article_chapter_link">Article Chapter</string>
    <string name="education">Education</string>
    <string name="food">Food</string>
    <string name="foreign">Foreign</string>
    <string name="science">Science</string>
    <string name="sports">Sports</string>
    <string name="technology">Technology</string>
    <string name="price">Price:</string>
    <string name="buy_it_now">Buy it now...</string>
    <string name="click_here_to_check_history">Click here to check history</string>
    <string name="local_booksellers">Local Booksellers:</string>
    <string name="barnes_and_noble">Barnes and Noble:</string>
    <string name="book_information">Book Information:</string>
    <string name="ranking_information">Ranking Information:</string>
    <string name="review_links">Review Links:</string>
    <string name="history">History</string>
</resources>
