<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.mindstix.nytimesapp.home.HomeFragment"
    android:orientation="vertical">

    <include layout="@layout/search_bar_layout" />

    <LinearLayout
        android:id="@+id/filterLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:weightSum="2"
        android:visibility="gone">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:weightSum="3"
            android:padding="@dimen/ten_dp">

            <CheckBox
                android:id="@+id/cbEducation"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/education" />

            <CheckBox
                android:id="@+id/cbFood"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/food" />

            <CheckBox
                android:id="@+id/cbForeign"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/foreign" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:weightSum="3"
            android:padding="10dp">

            <CheckBox
                android:id="@+id/cbScience"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/science" />

            <CheckBox
                android:id="@+id/cbSports"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/sports" />

            <CheckBox
                android:id="@+id/cbTechnology"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/technology" />

        </LinearLayout>

    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recycler_view_top_stories"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/five_dp"/>

</LinearLayout>
