<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card_view_overview"
    android:layout_width="match_parent"
    android:layout_height="@dimen/two_ten_dp"
    card_view:cardCornerRadius="@dimen/five_dp"
    card_view:cardUseCompatPadding="true"
    card_view:cardBackgroundColor="@android:color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="10">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="6"
            android:weightSum="10">

            <ImageView
                android:id="@+id/img_overview_thumbnail"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:scaleType="fitXY"
                android:contentDescription="@string/overview"/>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="7"
                android:orientation="vertical"
                android:weightSum="4"
                android:padding="@dimen/ten_dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:orientation="horizontal"
                    android:weightSum="5">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="4">                        >

                        <TextView
                            android:id="@+id/tv_rank"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:textStyle="bold"
                            android:textSize="@dimen/fifteen_dp"/>

                        <TextView
                            android:id="@+id/tv_book_title"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:maxLines="1"
                            android:ellipsize="end"
                            android:textStyle="bold"
                            android:paddingLeft="@dimen/five_dp"
                            android:textSize="@dimen/fifteen_dp"/>

                    </LinearLayout>

                    <ImageView
                        android:id="@+id/check_history"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:src="@drawable/history"
                        android:contentDescription="@string/history"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:weightSum="10">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="4">

                        <TextView
                            android:id="@+id/tv_price_label"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:textStyle="bold"
                            android:text="@string/price"/>

                        <TextView
                            android:id="@+id/tv_price"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:paddingLeft="@dimen/five_dp"/>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="6">

                        <TextView
                            android:id="@+id/tv_author_label"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:textStyle="bold"
                            android:text="@string/author"/>

                        <TextView
                            android:id="@+id/tv_author"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:maxLines="1"
                            android:ellipsize="end"
                            android:paddingLeft="@dimen/five_dp"/>

                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="2">

                    <TextView
                        android:id="@+id/tv_description"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:ellipsize="end"
                        android:textStyle="bold"/>

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="4"
            android:orientation="vertical"
            android:weightSum="12"
            android:padding="5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="4"
                android:weightSum="12">

                <TextView
                    android:id="@+id/tv_amazon_label"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="4"
                    android:textStyle="bold"
                    android:text="@string/amazon"/>

                <TextView
                    android:id="@+id/tv_amazon_link"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="8"
                    android:maxLines="1"
                    android:ellipsize="end"
                    android:autoLink="web"
                    android:textColorLink="@android:color/holo_blue_dark"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="4"
                android:weightSum="12">

                <TextView
                    android:id="@+id/tv_local_seller_label"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="4"
                    android:textStyle="bold"
                    android:text="@string/local_booksellers"/>

                <TextView
                    android:id="@+id/tv_local_seller_link"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="8"
                    android:maxLines="1"
                    android:ellipsize="end"
                    android:autoLink="web"
                    android:textColorLink="@android:color/holo_blue_dark"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="4"
                android:weightSum="12">

                <TextView
                    android:id="@+id/tv_barnes_and_noble"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="4"
                    android:textStyle="bold"
                    android:text="@string/barnes_and_noble"/>

                <TextView
                    android:id="@+id/tv_barnes_and_noble_link"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="8"
                    android:maxLines="1"
                    android:ellipsize="end"
                    android:autoLink="web"
                    android:textColorLink="@android:color/holo_blue_dark"/>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</android.support.v7.widget.CardView>